# maudec

./: .editorconfig  Makefile  README.md  pyproject.toml  tester.py
maudec/: __init__.py  __main__.py  analyzer.py  ast.py  compiler.py  dematch.py  identifiers.py  munit.py  utils.py
maudec/data/: cpp.json  dafny.json  maudec.schema.json  python.json  rust.json
maudec/generators/: common.py  cpp.py  dafny.py  dot.py  python.py  rust.py
maudec/theories/: assoc.py  builtin.py  comm.py  driver.py  integral.py  iter.py
tests/: collatz.maude  consecutive-test.maude  consecutive.maude  consecutive.toml  ejemplo.maude  euclid-test.maude  even-test.maude  extended-float-kind.maude  extended-float-sort.maude  free-simple-test.maude  free-tuples.maude  int-funs-test.maude  int-funs.maude  iter.maude  minimum-test.maude  mutual-recursion.maude  nat-funs-test.maude  palindrome-test.maude  simple-nested-rewrite.maude  stack-test.maude  stack.maude  stack.toml  stack2.maude  stack2.toml  truth-table.maude  unordered-pair-test.maude  unordered-pair.toml
tools/improve/: README.md  check.py  improve.py  make_test.py  missing.py
tools/improve/inputs/gemini-3-flash/misc/: ackerman.json  ackerman2.json  ackerman3.json  knapsack1.json  knapsack2.json  knapsack3.json  map.json  ordered-dfy.json  ordered.json  palindrome-eqs.json  palindrome-py.json  palindrome.json
tools/improve/inputs/spec/misc/: ackerman.toml  ackerman2.toml  ackerman3.toml  knapsack2.toml  knapsack3.toml  palindrome.toml
tools/improve/tests/claude-haiku-4.5/misc/: ackerman.cpp  knapsack3.cpp
(+645 files in other folders)
